@@ -166,6 +166,21 @@ Oct&nbsp;1&nbsp;2003
 <tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
 <td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
 
+May&nbsp;30&nbsp;2003
+
+</b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
+<B>New Spanish Guide to Glade</B>
+<P>
+Francisco Dominguez-Adame has written a new Spanish guide to using Glade,
+<a href="http://valbuena.fis.ucm.es/~adame/programacion/Glade/manual/Manual_de_glade.pdf">"Development of Scientific Applications with Glade"</a>.
+</font></td></tr>
+
+
+<tr valign="top"><td>&nbsp;&nbsp;&nbsp;</td>
+<td><b><font face="Arial,helvetica,geneva,sans-serif,lucida">
+
 May&nbsp;12&nbsp;2003
 
 </b></font></td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td>
