@@ -1,3 +1,7 @@
+2003-05-30  Damon Chaplin  <damon@gnome.org>
+
+	* index.html: added link to new Spanish guide to Glade.
+
 2003-05-12  Damon Chaplin  <damon@gnome.org>
 
 	* index.html: updated links to Olivier Karquel's French docs.
